Updated Base64 decoding from org.java's to org.apache's.